feat: header, searchbar and home card

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>React Tailwind Template</title>
         <link rel="stylesheet" href="css/tailwind-output.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+            rel="stylesheet"
+        />
     </head>
-    <body>
+    <body style="font-family: 'Poppins', sans-serif">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
     </body>
