--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,29 @@
             href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
             rel="stylesheet"
         />
+        <!-- <style>
+            Firefox
+            * {
+                scrollbar-width: 12px;
+                scrollbar-color: rgba(17, 24, 39, var(--tw-bg-opacity))
+                    rgba(31, 41, 55, var(--tw-bg-opacity));
+            }
+
+            /* Chrome, Edge, and Safari */
+            *::-webkit-scrollbar {
+                width: 12px;
+            }
+
+            *::-webkit-scrollbar-track {
+                background: rgba(31, 41, 55, var(--tw-bg-opacity));
+            }
+
+            *::-webkit-scrollbar-thumb {
+                background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+                border-radius: 10px;
+                border: 0px solid #ffffff;
+            }
+        </style> -->
     </head>
     <body style="font-family: 'Poppins', sans-serif">
         <noscript>You need to enable JavaScript to run this app.</noscript>
