style: many improvements

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
             rel="stylesheet"
         />
         <!-- <style>
-            Firefox
+            /* Firefox */
             * {
                 scrollbar-width: 12px;
-                scrollbar-color: rgba(17, 24, 39, var(--tw-bg-opacity))
-                    rgba(31, 41, 55, var(--tw-bg-opacity));
+                scrollbar-color: @apply rgba(17, 24, 39, var(--tw-bg-opacity))
+                    bg-gray-300;
             }
 
             /* Chrome, Edge, and Safari */
